# rm_auto_aim_tutorial

./: README.md
auto_aim/config/: config.yaml
auto_aim/launch/: launch.py
communicate/config/: config.yaml
scripts/: setup.bash
sensor/camera/: CMakeLists.txt
